registros y edición de perfiles

--- a/Acme-Conference/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/administrator/messages.properties
@@ -6,5 +6,19 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-administrator.action.1	= This is the administrator's action 1
-administrator.action.2	= This is the administrator's action 2
+
+administrator.name = Name
+administrator.middleName = Middle Name
+administrator.surname = Surname
+administrator.optionalPhoto = Optional Photo
+administrator.phoneNumber = Optional Phone Number
+administrator.email = Email
+administrator.address = Optional Address
+
+administrator.save = Save
+administrator.cancel = Cancel
+
+
+administrator.phone.error = Minimun 4 digits
+administrator.username.error = Username in use
+administrator.commit.error = Cannot Commit
