--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -34,5 +34,14 @@ master.page.configuration.edit = Configuration
 welcome.breach = Breach
 welcome.security = Security
 
+master.page.register = Register
+master.page.author.register = Register as Author
+master.page.reviewer.register = Register as Reviewer
+
+master.page.author.edit = Edit Profile
+master.page.admin.edit = Edit Profile
+master.page.reviewer.edit = Edit Profile
+
+
 master.page.login 					= Login
 master.page.logout 					= Logout
