--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -36,5 +36,10 @@ conference.save = Save
 conference.delete = Delete
 conference.confirm.delete = Confirm Delete
 conference.cancel= Cancel
+conference.return= Return
+
 
 conference.commit.error = Cannot commit
+
+conference.keyword = Keyword
+conference.search = Search
