--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -11,6 +11,7 @@ master.page.administrator.action.1	= Action 1
 master.page.administrator.action.2	= Action 2
 master.page.reviewer= Reviewer
 master.page.message = Messages
+master.page.conferences = Conferences
 master.page.author				= Author
 master.page.registration.list = My registrations
 master.page.submissionad.list = Submissions
@@ -20,9 +21,11 @@ master.page.conferencest.list = Conference in 5 days
 master.page.conferencestnot.list= Conference notification deadline
 master.page.conferencestcam.list= Conference camera deadline
 master.page.conferencestcam.list = Conference submission dedadline
-master.page.conference.prox = Forthcoming conferences
-master.page.conference.past= Past conferences
-master.page.conference.ejec = Running conferences
+master.page.conference.prox = Forthcoming Conferences
+master.page.conference.past= Past Conferences
+master.page.conference.ejec = Running Conferences
+master.page.conference.search= Search Conference
+
 master.page.customer.action.1		= Action 1
 master.page.customer.action.2		= Action 2
 master.page.conference.list = Conferences
