--- a/Acme-Conference/src/main/webapp/views/message/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages.properties
@@ -13,12 +13,11 @@ message.edit = Edit
 message.show = Show
 
 
-message.priority= Priority
+message.topic= Topic
 message.subject = Subject
 message.sender = Sender
 message.date = Date
 message.body = Body
-message.optionalTags = Optional Tags
 message.recipients = Recipients
 message.create= Create a new message
 
