--- a/Acme-Conference/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/administrator/messages.properties
@@ -15,6 +15,8 @@ administrator.phoneNumber = Optional Phone Number
 administrator.email = Email
 administrator.address = Optional Address
 
+administrator.checkPhoneNumber = Are you sure that your phone number is OK?
+
 administrator.save = Save
 administrator.cancel = Cancel
 
