--- a/Acme-Conference/src/main/webapp/views/configuration/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/configuration/messages.properties
@@ -14,6 +14,8 @@ configuration.save = Save
 configuration.delete = Delete
 configuration.confirm.delete = Confirm Delete
 configuration.cancel= Cancel
+configuration.return= Return
+
 
 configuration.sistemName= System Name
 configuration.welcomeSP= Welcome spanish
@@ -26,3 +28,7 @@ configuration.checkRebrand= ¿Are you sure do you want to do the procedure? Once 
 configuration.commit.error = Cannot commit
 configuration.spamword = Configuration Spam Words
 configuration.options = Others Configuration Options
+
+configuration.topic = Topic
+configuration.create.topic = Add new Topic
+configuration.topic.manage = Manage Topics
