tests y notification procedure

--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -31,5 +31,8 @@ submission.save = Save
 submission.delete = Delete
 submission.confirm.delete = Confirm Delete
 submission.cancel= Cancel
+submission.reports = Reports
+submission.confirm = A notification message will be sent to the author. Do you wish to continue?
+
 
 submission.commit.error = Cannot commit
