--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -46,5 +46,15 @@ master.page.admin.edit = Edit Profile
 master.page.reviewer.edit = Edit Profile
 
 
+master.page.message.list = List Messages
+master.page.message.allActors = Send Message All Actors
+master.page.message.allAuthors = Send Message All Authors
+master.page.message.allAuthorsSub = Send Message All Authors Who Made a Submission
+master.page.message.allAuthorsRegister = Send Message All Authors Registered at a Conference
+
+
+
+
+
 master.page.login 					= Login
 master.page.logout 					= Logout
