--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -38,6 +38,9 @@ conference.confirm.delete = Confirm Delete
 conference.cancel= Cancel
 conference.return= Return
 
+conference.list= All Conferences
+
+
 
 conference.commit.error = Cannot commit
 
