Ya esta bien por favor

--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -33,6 +33,9 @@ submission.confirm.delete = Confirm Delete
 submission.cancel= Cancel
 submission.reports = Reports
 submission.confirm = A notification message will be sent to the author. Do you wish to continue?
-
+submission.assign = Assign reviewers
+submission.assignAuto = Assign Reviewers Automatically
+submission.reviewers = Reviewers
+submission.revAviso = If you want to select more than one reviewers, you must keep clicked the Ctrl button in your keyboard while selecting them.
 
 submission.commit.error = Cannot commit
