--- a/Acme-Conference/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/administrator/messages.properties
@@ -15,6 +15,30 @@ administrator.phoneNumber = Optional Phone Number
 administrator.email = Email
 administrator.address = Optional Address
 
+administrator.daysPerConference= Minimum, maximum, average or standard deviation of number of days per conference. 
+administrator.avgDays = Average Days 
+administrator.minDays = Minimum Days 
+administrator.maxDays = Maximum Days 
+administrator.stdDevDays = Standard Deviation
+
+administrator.submissionsPerConference= Minimum, maximum, average or standard deviation of number of submissions per conference. 
+administrator.avgSubs = Average Submissions 
+administrator.minSubs = Minimum Submissions
+administrator.maxSubs = Maximum Submissions 
+administrator.stdSubs = Standard Deviation
+
+administrator.registrationsPerConference= Minimum, maximum, average or standard deviation of number of registrations per conference. 
+administrator.avgRegs = Average Registrations 
+administrator.minRegs = Minimum Registrations
+administrator.maxRegs = Maximum Registrations 
+administrator.stdRegs = Standard Deviation
+
+administrator.feesConference= Minimum, maximum, average or standard deviation of number of the conference fees. 
+administrator.avgFees = Average Fees 
+administrator.minFees = Minimum Fees
+administrator.maxFees = Maximum Fees 
+administrator.stdFees = Standard Deviation
+
 administrator.checkPhoneNumber = Are you sure that your phone number is OK?
 
 administrator.save = Save
