--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -25,6 +25,7 @@ master.page.conference.prox = Forthcoming Conferences
 master.page.conference.past= Past Conferences
 master.page.conference.ejec = Running Conferences
 master.page.conference.search= Search Conference
+master.page.dashboard = Dashboard
 
 master.page.customer.action.1		= Action 1
 master.page.customer.action.2		= Action 2
