--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -20,6 +20,8 @@ submission.document = Document
 submission.status = Status
 submission.camera = Camera Paper
 submission.cameraPaper = Camera Paper
+submission.decission= Decission making
+submission.paper= Show paper
 paper.show = Paper
 paper.title= Title
 paper.authors= Authors
