--- a/Acme-Conference/src/main/webapp/views/configuration/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/configuration/messages.properties
@@ -30,5 +30,10 @@ configuration.spamword = Configuration Spam Words
 configuration.options = Others Configuration Options
 
 configuration.topic = Topic
+configuration.make = Brand Name
+
 configuration.create.topic = Add new Topic
+configuration.create.brandName = Add new brand name
+
 configuration.topic.manage = Manage Topics
+configuration.brandName.manage = Manage brand names
