--- a/Acme-Conference/src/main/webapp/views/configuration/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/configuration/messages.properties
@@ -8,6 +8,8 @@
 
 configuration.show = Show
 configuration.edit = Edit
+configuration.edit.c = Edit Configuration
+
 
 configuration.create = Create a new float
 configuration.save = Save
@@ -18,10 +20,10 @@ configuration.return= Return
 
 
 configuration.sistemName= System Name
-configuration.welcomeSP= Welcome spanish
-configuration.welcomeEN= Welcome english
-configuration.bannerURL= banner url
-configuration.countryCode= country code
+configuration.welcomeSP= Welcome Spanish
+configuration.welcomeEN= Welcome English
+configuration.bannerURL= Banner URL
+configuration.countryCode= Country Code
 configuration.reBrand = ¿Notify the existing users of the rebranding?
 configuration.checkRebrand= ¿Are you sure do you want to do the procedure? Once done, it will not be able to be done again.
 
@@ -33,7 +35,7 @@ configuration.topic = Topic
 configuration.make = Brand Name
 
 configuration.create.topic = Add new Topic
-configuration.create.brandName = Add new brand name
+configuration.create.brandName = Add new Brand Name
 
 configuration.topic.manage = Manage Topics
-configuration.brandName.manage = Manage brand names
+configuration.brandName.manage = Manage Brand Names
