--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -25,6 +25,7 @@ conference.cameraDeadline = Camera deadline
 conference.startDate = Start date
 conference.endDate = End date
 conference.fee = Fee
+conference.activities= Activities
 conferencesub.commit.error = The submission deadline must be before the notification deadline.
 conferencenot.commit.error= The notification deadline must be before the camera-ready deadline.
 conferencecam.commit.error = The camera-ready deadline must be before the start date.
