El upload y arregletos del merge

--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -8,8 +8,9 @@
 
 #customer.action.1	= This is the customer's action 1
 #customer.action.2	= This is the customer's action 2
-submission.decision= Descision making
-submission.edit = Edit
+submission.decision= Decision making
+submission.edit = Upload camera-ready version
+submission.upload = Upload
 submission.show = Show
 submission.conference = Conference
 report.create = Make a report
