--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -42,6 +42,7 @@ conference.return= Return
 conference.list= All Conferences
 conference.summary= Summary
 
+conference.delete.error = You can't delete a conference in FINAL MODE.
 
 
 conference.commit.error = Cannot commit
