--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -39,3 +39,4 @@ section.create = Create section
 presentation.commit.error = Cannot Commit
 tutorial.commit.error = Cannot Commit
 panel.commit.error = Cannot Commit
+activity.empty.error = You cannot create an empty activity
