--- a/Acme-Conference/src/main/webapp/views/section/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/section/messages.properties
@@ -17,3 +17,4 @@ section.edit = Edit
 section.return = Return
 
 section.commit.error = Cannot commit
+section.empty.error = Cannot commit an empty section
