--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -42,5 +42,5 @@ submission.reviewers = Reviewers
 submission.revAviso = If you want to select more than one reviewers, you must keep clicked the Ctrl button in your keyboard while selecting them.
 
 submission.author.error = You must also be a paper author
-
+submission.reviewers.error = You must choose at least one reviewer
 submission.commit.error = Cannot commit
