todos los cancels

--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -13,6 +13,7 @@ activity.endMoment = End Moment
 activity.room = Room
 activity.summary = Summary
 activity.optionalAttachments = Optional Attachments
+activity.return = Return
 
 tutorial.section = Add a section
 tutorial.sections = Sections
