--- a/Acme-Conference/src/main/webapp/views/registration/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/registration/messages.properties
@@ -37,5 +37,6 @@ registration.save = Save
 registration.delete = Delete
 registration.confirm.delete = Confirm Delete
 registration.cancel= Cancel
+registration.return= Return
 
 registration.commit.error = Cannot commit
