--- a/Acme-Conference/src/main/webapp/views/report/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages.properties
@@ -25,5 +25,6 @@ report.save = Save
 report.delete = Delete
 report.confirm.delete = Confirm Delete
 report.cancel= Cancel
+report.return= Return
 
 report.commit.error = Cannot commit
