--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -40,6 +40,7 @@ submission.assign = Assign reviewers
 submission.assignAuto = Assign Reviewers Automatically
 submission.reviewers = Reviewers
 submission.revAviso = If you want to select more than one reviewers, you must keep clicked the Ctrl button in your keyboard while selecting them.
+submission.return= Return
 
 submission.author.error = You must also be a paper author
 submission.reviewers.error = You must choose at least one reviewer
