--- a/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
@@ -16,7 +16,7 @@ reviewer.optionalPhoto = Optional Photo
 reviewer.phoneNumber = Optional Phone Number
 reviewer.email = Email
 reviewer.address = Optional Address
-reviewer.experiences = Experiences
+reviewer.keywords = List keywords that describe your expertise
 
 
 reviewer.save = Save
