email admin y cannot commit activities

--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -41,6 +41,7 @@ submission.assignAuto = Assign Reviewers Automatically
 submission.reviewers = Reviewers
 submission.revAviso = If you want to select more than one reviewers, you must keep clicked the Ctrl button in your keyboard while selecting them.
 submission.return= Return
+submission.return.activities = Activities
 
 submission.author.error = You must also be a paper author
 submission.reviewers.error = You must choose at least one reviewer
