--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -8,8 +8,8 @@
 
 activity.title = Title
 activity.speakers = Speakers
-activity.startMoment = Start Moment
-activity.endMoment = End Moment
+activity.startMoment = Start Moment(dd/MM/yyyy HH:mm)
+activity.endMoment = End Moment(dd/MM/yyyy HH:mm)
 activity.room = Room
 activity.summary = Summary
 activity.optionalAttachments = Optional Attachments
