--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -19,11 +19,11 @@ conference.show = Show
 conference.title = Title
 conference.acronym = Acronym
 conference.venue = Venue
-conference.submissionDeadline = Submission deadline
-conference.notificationDeadline = Notification deadline
-conference.cameraDeadline = Camera deadline
-conference.startDate = Start date
-conference.endDate = End date
+conference.submissionDeadline = Submission deadline(dd/MM/yyyy HH:mm)
+conference.notificationDeadline = Notification deadline(dd/MM/yyyy HH:mm)
+conference.cameraDeadline = Camera deadline(dd/MM/yyyy HH:mm)
+conference.startDate = Start date(dd/MM/yyyy HH:mm)
+conference.endDate = End date(dd/MM/yyyy HH:mm)
 conference.fee = Fee
 conference.activities= Activities
 conferencesub.commit.error = The submission deadline must be before the notification deadline.
