--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -12,14 +12,14 @@ activity.startMoment = Start Moment(dd/MM/yyyy HH:mm)
 activity.endMoment = End Moment(dd/MM/yyyy HH:mm)
 activity.room = Room
 activity.summary = Summary
-activity.optionalAttachments = Optional Attachments
+activity.optionalAttachments = Optional Attachments(Object1, Object2)
 activity.return = Return
 
 tutorial.section = Add a section
 tutorial.sections = Sections
 presentation.submission = Camera-Ready Submission
 presentation.subm = Submission
-
+paneldate.commit.error= The dates must be between conference start and end date.
 panel.save = Save
 panel.cancel = Cancel
 tutorial.save = Save
