--- a/Acme-Conference/src/main/webapp/views/section/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/section/messages.properties
@@ -9,7 +9,7 @@
 
 section.title = Title
 section.summary = Summary
-section.optionalPictures = Optional Pictures
+section.optionalPictures = Optional Pictures(Object1, Object2)
 
 section.save = Save
 section.cancel = Cancel
