--- a/Acme-Conference/src/main/webapp/views/section/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/section/messages.properties
@@ -18,3 +18,4 @@ section.return = Return
 
 section.commit.error = Cannot commit
 section.empty.error = Cannot commit an empty section
+section.url.error = Optional pictures must be URLs
