--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -24,6 +24,7 @@ submission.cameraPaper = Camera Paper
 submission.decission= Decision making
 submission.uploaded = Uploaded
 submission.paper= Show paper
+submission.ready = This is the camera-ready version
 paper.show = Paper
 paper.title= Title
 paper.authors= Authors
