--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -7,12 +7,16 @@
 # http://www.tdg-seville.info/License.html
 
 activity.title = Title
-activity.speakers = Speakers
-activity.startMoment = Start Moment(dd/MM/yyyy HH:mm)
-activity.endMoment = End Moment(dd/MM/yyyy HH:mm)
+activity.speakers = Speakers(Object1, Object2)
+activity.startMoment = Start Moment
+activity.startMomentED = Start Moment(dd/MM/yyyy HH:mm)
+
+activity.endMoment = End Moment
+activity.endMomentED = End Moment(dd/MM/yyyy HH:mm)
+
 activity.room = Room
 activity.summary = Summary
-activity.optionalAttachments = Optional Attachments(Object1, Object2)
+activity.optionalAttachments = Optional Attachments(URL1, URL2)
 activity.return = Return
 
 tutorial.section = Add a section
