--- a/Acme-Conference/src/main/webapp/views/section/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/section/messages.properties
@@ -15,6 +15,7 @@ section.save = Save
 section.cancel = Cancel
 section.edit = Edit
 section.return = Return
+section.create = Create
 
 section.commit.error = Cannot commit
 section.empty.error = Cannot commit an empty section
