--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -25,6 +25,7 @@ submission.decission= Decision making
 submission.uploaded = Uploaded
 submission.paper= Show paper
 submission.ready = This is the camera-ready version
+submission.conference.summary = Conference's summary
 paper.show = Paper
 paper.title= Title
 paper.authors= Authors
