--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -10,6 +10,7 @@ activity.title = Title
 activity.speakers = Speakers(Object1, Object2)
 activity.startMoment = Start Moment
 activity.startMomentED = Start Moment(dd/MM/yyyy HH:mm)
+activity.conference = Conference
 
 activity.endMoment = End Moment
 activity.endMomentED = End Moment(dd/MM/yyyy HH:mm)
@@ -18,6 +19,10 @@ activity.room = Room
 activity.summary = Summary
 activity.optionalAttachments = Optional Attachments(URL1, URL2)
 activity.return = Return
+
+activity.listPresentation = List Presentations
+activity.listTutorial = List Tutorials
+activity.listPanel = List Panels
 
 tutorial.section = Add a section
 tutorial.sections = Sections
