--- a/Acme-Conference/src/main/webapp/views/configuration/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/configuration/messages.properties
@@ -39,4 +39,5 @@ configuration.create.brandName = Add new Brand Name
 
 configuration.topic.manage = Manage Topics
 configuration.brandName.manage = Manage Brand Names
+brandName.commit.error = Brand Name can't be empty
 
