--- a/Acme-Conference/src/main/webapp/views/registration/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/registration/messages.properties
@@ -40,3 +40,4 @@ registration.cancel= Cancel
 registration.return= Return
 
 registration.commit.error = Cannot commit
+registration.creditCard.error = Credit Card is expired
