--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -28,7 +28,7 @@ tutorial.section = Add a section
 tutorial.sections = Sections
 presentation.submission = Camera-Ready Submission
 presentation.subm = Submission
-paneldate.commit.error= The dates must be between conference start and end date.
+paneldate.commit.error= The dates must be between conference start and end date, and start moment must be before end moment.
 panel.save = Save
 panel.cancel = Cancel
 tutorial.save = Save
