--- a/Acme-Conference/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages_es.properties
@@ -9,14 +9,19 @@
 message.edit = Editar
 message.show = Mostrar
 
-
-message.priority= Prioridad
-message.subject = Asunto
-message.sender = Remitente
+message.topic= Materias
+message.subject = Tema
+message.sender = Emisor
 message.date = Fecha
-message.body = Cuerpo del mensaje
-message.optionalTags = Etiquetas opcionales
-message.recipients = Destinatarios
+message.body = Cuerpo
+message.recipients = Receptores
+message.create= Enviar nuevo Mensaje
+
+
+message.broadcast = Enviar Mensaje a todos los Actores
+message.authors = Enviar Mensaje a todos los Autores
+message.authorsSub = Enviar Mensaje a todos los Autores que han hecho una Entra a una Conferencia
+message.authorsRegistrations = Enviar Mensaje a todos los Autores que se han registrado en una Conferencia
 
 
 message.save = Guardar
