--- a/Acme-Conference/src/main/webapp/views/paper/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/paper/messages_es.properties
@@ -6,24 +6,26 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-room.edit = Editar
-room.show = Mostrar
-room.typeRoom = Tipo de habitación
+submission.edit = Editar
+submission.show = Mostrar
+submission.conference = Conferencia
 
-room.numberRoom = Número de habitación
-room.floor = Planta
-roomN.commit.error= Este Número de habitación ya existe.
+submission.ticker = Código
+submission.moment = Momento
+submission.document = Documento
+submission.status = Estado
+submission.camera = Papel definitivo
+submission.cameraPaper = Papel definitivo
+paper.show = Papel
+paper.title= Título
+paper.authors= Autores
+paper.summary= Resumen
+paper.document= Documento
+author.paper= Papel a revisar
+submission.create = Crear una nueva entrega
+submission.save = Guardar
+submission.delete = Borrar
+submission.confirm.delete = Confirmar eliminación
+submission.cancel= Cancelar
 
-room.create = Crear una nueva habitación
-room.save = Guardar
-room.delete = Eliminar
-room.confirm.delete = Confirmar eliminación
-room.cancel= Cancelar
-room.apply = Solicitar esta
-
-room.applyRoom = Solicitar una habitación
-
-room.allow = Si no has completado tu expediente académico, no puedes solicitar una habitación.
-
-
-room.commit.error = No se puede realizar la operación
+submission.commit.error = No se puede realizar la operación
