--- a/Acme-Conference/src/main/webapp/views/registration/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/registration/messages_es.properties
@@ -6,24 +6,35 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-room.edit = Editar
-room.show = Mostrar
-room.typeRoom = Tipo de habitación
+registration.edit = Editar
+registration.show = Mostrar
+registration.conference = Conferencia
 
-room.numberRoom = Número de habitación
-room.floor = Planta
-roomN.commit.error= Este Número de habitación ya existe.
+conference.title = Título
+conference.acronym = Acrónimo
+conference.venue = Lugar de celebración
+conference.submissionDeadline = Plazo límite de entrega
+conference.notificationDeadline = Plazo límite de notificación
+conference.cameraDeadline = Plazo límite de versión definitiva
+conference.startDate = Fecha de inicio
+conference.endDate = Fecha final
+conference.fee = Precio
 
-room.create = Crear una nueva habitación
-room.save = Guardar
-room.delete = Eliminar
-room.confirm.delete = Confirmar eliminación
-room.cancel= Cancelar
-room.apply = Solicitar esta
+creditCard.holderName = Nombre del Titular
+creditCard.brandName = Marca Comercial
+director.creditCard.number = Número
+creditCard.expMonth = Mes de Expiració
+creditCard.expYear = Año de Expiración
+creditCard.cvv = CVV
+author.creditCard = Tarjeta de Crédito
+author.creditCard.number = Número de la tarjeta de crédito
 
-room.applyRoom = Solicitar una habitación
+registration.create = Crear un nuevo registro
+registration.save = Guardar
+registration.delete = Borrar
+registration.confirm.delete = Confirmar Eliminación
+registration.cancel= Cancelar
+registration.return= Volver
 
-room.allow = Si no has completado tu expediente académico, no puedes solicitar una habitación.
-
-
-room.commit.error = No se puede realizar la operación
+registration.commit.error = No se puede realizar la operación
+registration.creditCard.error = Tarjeta de crédito está caducada
