--- a/Acme-Conference/src/main/webapp/views/report/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages_es.properties
@@ -6,24 +6,22 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-room.edit = Editar
-room.show = Mostrar
-room.typeRoom = Tipo de habitación
+report.edit = Editar
+report.show = Mostrar
+report.originality = Originalidad
 
-room.numberRoom = Número de habitación
-room.floor = Planta
-roomN.commit.error= Este Número de habitación ya existe.
+report.quality = Calidad
+report.readability = Legibilidad
+report.conference = Conferencia
+report.comment= Comentario
+report.decision = Decisión
+report.submissioncon= Conferencia de la entrega
 
-room.create = Crear una nueva habitación
-room.save = Guardar
-room.delete = Eliminar
-room.confirm.delete = Confirmar eliminación
-room.cancel= Cancelar
-room.apply = Solicitar esta
+report.create = Crear un nuevo informe
+report.save = Guardar
+report.delete = Borrar
+report.confirm.delete = Confirmar Eliminación
+report.cancel= Cancelar
+report.return= Volver
 
-room.applyRoom = Solicitar una habitación
-
-room.allow = Si no has completado tu expediente académico, no puedes solicitar una habitación.
-
-
-room.commit.error = No se puede realizar la operación
+report.commit.error = No se puede realizar la operación
