--- a/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/reviewer/messages_es.properties
@@ -6,5 +6,24 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-administrator.action.1	= Esta es la acción 1 del administrador
-administrator.action.2	= Esta es la acción 2 del administrador
+reviewer.username = Usuario
+reviewer.password = Contraseña
+
+reviewer.name = Nombre
+reviewer.middleName = Middle Name
+reviewer.surname = Apellido
+reviewer.optionalPhoto = Foto opcional
+reviewer.phoneNumber = Número de movil opcional
+reviewer.email = Email
+reviewer.address = Dirección opcional
+reviewer.keywords = Palabras claves que describa la experiencia(Objeto1, Objeto2)
+
+
+reviewer.save = Guardar
+reviewer.cancel = Cancelar
+
+
+reviewer.phone.error = Mínimo 4 dígitos
+reviewer.username.error = Nombre de usuario en uso
+reviewer.commit.error = No se puede realizar la operación
+reviewer.email.error = El formato del email es incorrecto, debe de ser identifier@domain o alias <identifier@domain>
