--- a/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/reviewer/messages.properties
@@ -26,4 +26,4 @@ reviewer.cancel = Cancel
 reviewer.phone.error = Minimun 4 digits
 reviewer.username.error = Username in use
 reviewer.commit.error = Cannot Commit
-reviewer.email.error = El formato del email es incorrecto, debe de ser identifier@domain o alias <identifier@domain>
+reviewer.email.error = The email format is incorrect, it must be identifier@domain or alias <identifier@domain>
