--- a/Acme-Conference/src/main/webapp/views/section/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/section/messages_es.properties
@@ -5,6 +5,16 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
+section.title = Título
+section.summary = Descripción
+section.optionalPictures = Imágenes opcionales(Objeto1, Objeto2)
 
-administrator.action.1	= Esta es la acción 1 del administrador
-administrator.action.2	= Esta es la acción 2 del administrador
+section.save = Guardar
+section.cancel = Cancelar
+section.edit = Editar
+section.return = Volver
+section.create = Crear
+
+section.commit.error = No se puede realizar la operación
+section.empty.error = Sección vacía
+section.url.error = Las imágenes deben ser URLs
