--- a/Acme-Conference/src/main/webapp/views/topic/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/topic/messages_es.properties
@@ -6,24 +6,15 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-room.edit = Editar
-room.show = Mostrar
-room.typeRoom = Tipo de habitación
+topic.en = Inglés
+topic.sp = Español
+topic.englishName=Nombre en inglñes
+topic.spanishName=Nombre en español
 
-room.numberRoom = Número de habitación
-room.floor = Planta
-roomN.commit.error= Este Número de habitación ya existe.
-
-room.create = Crear una nueva habitación
-room.save = Guardar
-room.delete = Eliminar
-room.confirm.delete = Confirmar eliminación
-room.cancel= Cancelar
-room.apply = Solicitar esta
-
-room.applyRoom = Solicitar una habitación
-
-room.allow = Si no has completado tu expediente académico, no puedes solicitar una habitación.
-
-
-room.commit.error = No se puede realizar la operación
+configuration.create = Crear
+configuration.save = Guardar
+configuration.delete = Eliminar
+configuration.confirm.delete = Confirmar eliminación
+configuration.cancel= Cancelar
+configuration.return= Volver
+configuration.edit= Editar
