--- a/Acme-Conference/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/administrator/messages.properties
@@ -48,4 +48,4 @@ administrator.cancel = Cancel
 administrator.phone.error = Minimun 4 digits
 administrator.username.error = Username in use
 administrator.commit.error = Cannot Commit
-administrator.email.error = El formato del email es incorrecto, debe de ser identifier@ o alias <identifier@>
+administrator.email.error = The email format is incorrect, it must be identifier @ or alias <identifier @>
