--- a/Acme-Conference/src/main/webapp/views/author/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/author/messages.properties
@@ -24,4 +24,4 @@ author.cancel = Cancel
 author.phone.error = Minimun 4 digits
 author.username.error = Username in use
 author.commit.error = Cannot Commit
-author.email.error = El formato del email es incorrecto, debe de ser identifier@domain o alias <identifier@domain>
+author.email.error = The email format is incorrect, it must be identifier @ domain or alias <identifier @ domain>
