--- a/Acme-Conference/src/main/webapp/views/configuration/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/configuration/messages.properties
@@ -11,7 +11,7 @@ configuration.edit = Edit
 configuration.edit.c = Edit Configuration
 
 
-configuration.create = Create a new float
+configuration.create = Create a new configuration
 configuration.save = Save
 configuration.delete = Delete
 configuration.confirm.delete = Confirm Delete
