--- a/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
@@ -6,5 +6,48 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-administrator.action.1	= Esta es la acción 1 del administrador
-administrator.action.2	= Esta es la acción 2 del administrador
+activity.title = Título
+activity.speakers = Ponentes(Ponente1, Ponente2)
+activity.startMoment = Fecha comienzo
+activity.startMomentED = Fecha comienzo(dd/MM/yyyy HH:mm)
+activity.conference = Conferencia
+
+activity.endMoment = Fecha fin
+activity.endMomentED = Fecha fin(dd/MM/yyyy HH:mm)
+
+activity.room = Sala
+activity.summary = Resumen
+activity.optionalAttachments = Archivos adjuntos opcionales(URL1, URL2)
+activity.return = Volver
+
+activity.listPresentation = Listado Presentaciones
+activity.listTutorial = Listado Tutoriales
+activity.listPanel = Listado Paneles
+
+tutorial.section = Añadir Sección
+tutorial.sections = Secciones
+presentation.submission = Entrega lista
+presentation.subm = Entrega
+paneldate.commit.error= Las fechas deben estar entre la fecha de inicio y fin, y fecha inicio debe ser anterior a la de fin.
+panel.save = Guardar
+panel.cancel = Cancelar
+tutorial.save = Guardar
+tutorial.cancel = Cancelar
+presentation.save = Guardar
+presentation.cancel = Cancelar
+panel.create = Crear Panel
+panel.delete = Eliminar
+panel.show = Editar
+tutorial.create = Crear Tutorial
+tutorial.show = Editar
+tutorial.delete = Eliminar
+presentation.create = Crear Presentación
+presentation.show = Editar
+presentation.delete = Eliminar
+section.create = Crear Sección
+
+presentation.commit.error = Operación no válida
+tutorial.commit.error = Operación no válida
+panel.commit.error = Operación no válida
+activity.empty.error = No puedes crear una actividad vacía
+activity.url.error = Archivos adjuntos deben ser URLs
