--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -59,3 +59,7 @@ master.page.message.allAuthorsRegister = Send Message All Authors Registered at 
 
 master.page.login 					= Login
 master.page.logout 					= Logout
+
+
+master.page.categories = Categories
+master.page.finder = Finder
