--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -55,3 +55,5 @@ conference.commit.error = Operación no válida
 
 conference.keyword = Palabra Clave
 conference.search = Buscar
+
+conference.category = Categoría
