--- a/Acme-Conference/src/main/webapp/views/finder/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/finder/messages.properties
@@ -6,8 +6,6 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-#customer.action.1	= This is the customer's action 1
-#customer.action.2	= This is the customer's action 2
 
 finder.keyword = Keyword
 finder.startDate = Star Date Conference
@@ -20,7 +18,7 @@ finder.cancel = Cancel
 finder.reset = Reset
 
 finder.commit.error = Cannot Commit
-finder.fecha.error = Start Date must be before End Date
+finder.fecha.error = Start Date must be before End Date.
 
 
 
