--- a/Acme-Conference/src/main/webapp/views/finder/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/finder/messages_es.properties
@@ -6,4 +6,16 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-category.spanishTitle = Titulo
+
+finder.keyword = Palabra Clave
+finder.startDate = Fecha Inicio Conferencia
+finder.endDate = Fecha Fin Conferencia
+finder.category = Categoría
+finder.fee = Máximo de Matrrícula
+
+finder.save = Guardar
+finder.cancel = Cancelar
+finder.reset = Resetear
+
+finder.commit.error = Operación No Válida
+finder.fecha.error = Fecha Inicio debe ser anterior a Fecha Fin.
