--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -27,12 +27,9 @@ master.page.dashboard = Tablero de estadísticas
 
 master.page.conference.list = Conferencias
 master.page.profile 				= Profile
-master.page.profile.action.1 		= Action 1
-master.page.profile.action.2		= Action 2
-master.page.profile.action.3		= Action 3
 master.page.configuration.edit = Configuración
 welcome.breach = Brecha
-welcome.security = Securidad
+welcome.security = Seguridad
 
 master.page.register = Registrarse
 master.page.author.register = Registrarse como Autor
@@ -51,3 +48,6 @@ master.page.message.allAuthorsRegister = Enviar Mensaje a todos los autores regi
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
+
+master.page.categories = Categorias
+master.page.finder = Buscador
