--- a/Acme-Conference/src/main/webapp/views/report/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages_es.properties
@@ -17,7 +17,7 @@ report.readability = Legibilidad
 report.conference = Conferencia
 report.comment= Comentario
 report.decision = Decisión
-report.submissioncon= Conferencia de la presentación
+report.submissioncon= Conferencia de la entrega
 
 report.create = Crear un nuevo informe
 report.save = Guardar
