--- a/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
@@ -30,7 +30,7 @@ paper.authors= Autores
 paper.summary= Resumen
 paper.document= Documento
 author.paper= Papel a revisar
-submission.create = Crear una nueva presentación
+submission.create = Crear una nueva entrega
 submission.save = Guardar
 submission.delete = Eliminar
 submission.confirm.delete = Confirmar eliminación
@@ -43,8 +43,8 @@ submission.reviewers = Revisores
 submission.revAviso = Si quiere seleccionar más de un revisor,debes mantener presionado CTRL.
 submission.return= Volver
 submission.return.activities = Actividades
-submission.assign.conf = Opción para completar la asignación de revisores automáticamente; dicho proceso debe garantizar que cada envío sea asignado a tres revisores, de modo que cualquiera de sus palabras clave esté contenida en el título o el resumen de la conferencia correspondiente. En casos excepcionales en los que no hay suficientes revisores disponibles, una presentación puede tener menos de tres revisores, posiblemente ninguno. ¿Está seguro?
+submission.assign.conf = Opción para completar la asignación de revisores automáticamente; dicho proceso debe garantizar que cada envío sea asignado a tres revisores, de modo que cualquiera de sus palabras clave esté contenida en el título o el resumen de la conferencia correspondiente. En casos excepcionales en los que no hay suficientes revisores disponibles, una entrega/envio puede tener menos de tres revisores, posiblemente ninguno. ¿Está seguro?
 
-submission.author.error = Debe ser un autor de documento
+submission.author.error = Debe ser un autor del papel.
 submission.reviewers.error = Debe elegir al menos un revisor
 submission.commit.error = No se puede realizar la operación
