--- a/Acme-Conference/src/main/webapp/views/category/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/category/messages_es.properties
@@ -6,4 +6,22 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+
+
+
 category.spanishTitle = Titulo
+category.englishTitle2 = Título Inglés
+category.spanishTitle2 = Título Español
+
+category.parent = Padre
+category.children = Hijos
+
+category.return = Volver
+category.save = Guardar
+category.delete = Eliminar
+
+category.cancel = Cancelar
+category.create = Añadir Categoría
+category.edit = Editar
+category.commit.error = Operación No Válida
+category.parent.error = Debes escoger una categoría padre.
