--- a/Acme-Conference/src/main/webapp/views/registration/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/registration/messages.properties
@@ -41,3 +41,4 @@ registration.return= Return
 
 registration.commit.error = Cannot commit
 registration.creditCard.error = Credit Card is expired
+registration.creditCard = Pay with this Credit Card:
