--- a/Acme-Conference/src/main/webapp/views/registration/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/registration/messages_es.properties
@@ -38,3 +38,4 @@ registration.return= Volver
 
 registration.commit.error = No se puede realizar la operación
 registration.creditCard.error = Tarjeta de crédito está caducada
+registration.creditCard = Pagado con la siguiente Tarjeta de Crédito:
