Arreglado fallos merge

--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -59,3 +59,5 @@ conference.commit.error = Cannot commit
 
 conference.keyword = Keyword
 conference.search = Search
+
+conference.category = Category
