--- a/Acme-Conference/src/main/webapp/views/configuration/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/configuration/messages.properties
@@ -11,7 +11,7 @@ configuration.edit = Edit
 configuration.edit.c = Edit Configuration
 
 
-configuration.create = Create a new float
+configuration.create = Create a new configuration
 configuration.save = Save
 configuration.delete = Delete
 configuration.confirm.delete = Confirm Delete
@@ -40,4 +40,3 @@ configuration.create.brandName = Add new Brand Name
 configuration.topic.manage = Manage Topics
 configuration.brandName.manage = Manage Brand Names
 brandName.commit.error = Brand Name can't be empty
-
