--- a/Acme-Conference/src/main/webapp/views/report/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages_es.properties
@@ -19,8 +19,8 @@ report.submissioncon= Conferencia de la entrega
 
 report.create = Crear un nuevo informe
 report.save = Guardar
-report.delete = Borrar
-report.confirm.delete = Confirmar Eliminación
+report.delete = Eliminar
+report.confirm.delete = Confirmar eliminación
 report.cancel= Cancelar
 report.return= Volver
 
