--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -6,9 +6,8 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-activity.comments = Comments
 activity.title = Title
-activity.speakers = Speakers(Object1, Object2)
+activity.speakers = Speakers(Speaker1, Speaker2)
 activity.startMoment = Start Moment
 activity.startMomentED = Start Moment(dd/MM/yyyy HH:mm)
 activity.conference = Conference
