--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -6,24 +6,55 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-room.edit = Editar
-room.show = Mostrar
-room.typeRoom = Tipo de habitación
+conference.submissionDeadlineList= Conferencias por Fecha Límite Entrega
+conference.notificationDeadlineList= Conferencias por Fecha Límite Notificación
+conference.cameraDeadlineList = Conferencias por Fecha Límite de Cámara
+conference.startList= Conferencias en 5 dias
+conference.edit = Editar
+conference.show = Mostrar
+conference.title = Título
+conference.acronym = Acronimo
+conference.venue = Lugar de Encuentro
+conference.submissionDeadline = Fecha Limite Entrega
+conference.submissionDeadlineED = Fecha Limite Entrega(dd/MM/yyyy HH:mm)
 
-room.numberRoom = Número de habitación
-room.floor = Planta
-roomN.commit.error= Este Número de habitación ya existe.
+conference.notificationDeadline = Fecha Limite Notificación
+conference.notificationDeadlineED = Fecha Limite Notificación(dd/MM/yyyy HH:mm)
 
-room.create = Crear una nueva habitación
-room.save = Guardar
-room.delete = Eliminar
-room.confirm.delete = Confirmar eliminación
-room.cancel= Cancelar
-room.apply = Solicitar esta
+conference.cameraDeadline = Fecha Limite Cámara
+conference.cameraDeadlineED = Fecha Limite Cámara(dd/MM/yyyy HH:mm)
 
-room.applyRoom = Solicitar una habitación
+conference.startDate = Fecha Inicio
+conference.startDateED = Fecha Inicio(dd/MM/yyyy HH:mm)
 
-room.allow = Si no has completado tu expediente académico, no puedes solicitar una habitación.
+conference.endDate = Fecha Fin
+conference.endDateED = Fecha Fin(dd/MM/yyyy HH:mm)
+
+conference.fee = Matrícula
+conference.activities= Actividades
+conferencesub.commit.error = Fecha limite entrega debe ser anterior a fecha limite notificación.
+conferencenot.commit.error= Fecha límite notificación debe ser anterior a fecha límite cámara.
+conferencecam.commit.error = Fecha limite cámara debe ser anterior a la fecha de inicio de la conferencia.
+conferencest.commit.error = La fecha de Inicio debe ser anterior a la fecga de fin.
+conference.draftMode = Modo Borrador
+
+conference.create = Crear Nueva Conferencia
+conference.save = Guardar
+conference.delete = Eliminar
+conference.confirm.delete = Confirmar Eliminación
+conference.cancel= Cancelar
+conference.return= Volver
+
+conference.list= Todas Conferencias
+conference.summary= Resumen
+
+conference.delete.error = No puedes eliminar conferencia en modo FINAL.
 
 
-room.commit.error = No se puede realizar la operación
+conference.commit.error = Operación no válida
+
+conference.keyword = Palabra Clave
+conference.search = Buscar
+
+conference.category = Categoría
+conference.comments = Comentarios
