--- a/Acme-Conference/src/main/webapp/views/registration/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/registration/messages_es.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+
 registration.edit = Editar
 registration.show = Mostrar
 registration.conference = Conferencia
@@ -38,3 +39,4 @@ registration.return= Volver
 
 registration.commit.error = No se puede realizar la operación
 registration.creditCard.error = Tarjeta de crédito está caducada
+registration.creditCard = Pagado con la siguiente Tarjeta de Crédito:
